# MSL

./: .gitignore  .gitmodules  README.md  environment_x86.yml
flight_control/: README.md  pyproject.toml
flight_control/notebooks/: acados_ocp_nlp_policy.json  sigmoid.ipynb
flight_control/notebooks/c_generated_code/quadcopter_ode_model_1_144_27_6_cost/: quadcopter_ode_model_1_144_27_6_cost_y_0_fun.c  quadcopter_ode_model_1_144_27_6_cost_y_0_fun_jac_ut_xt.c  quadcopter_ode_model_1_144_27_6_cost_y_0_hess.c  quadcopter_ode_model_1_144_27_6_cost_y_e_fun.c  quadcopter_ode_model_1_144_27_6_cost_y_e_fun_jac_ut_xt.c  quadcopter_ode_model_1_144_27_6_cost_y_e_hess.c  quadcopter_ode_model_1_144_27_6_cost_y_fun.c  quadcopter_ode_model_1_144_27_6_cost_y_fun_jac_ut_xt.c  quadcopter_ode_model_1_144_27_6_cost_y_hess.c
flight_control/notebooks/c_generated_code/quadcopter_ode_model_1_144_27_6_model/: quadcopter_ode_model_1_144_27_6_impl_dae_fun.c  quadcopter_ode_model_1_144_27_6_impl_dae_fun_jac_x_xdot_u.c  quadcopter_ode_model_1_144_27_6_impl_dae_fun_jac_x_xdot_u_z.c  quadcopter_ode_model_1_144_27_6_impl_dae_fun_jac_x_xdot_z.c  quadcopter_ode_model_1_144_27_6_impl_dae_jac_x_xdot_u_z.c
flight_control/scripts/: flight_command.py
flight_control/src/controller/: base_controller.py  vehicle_rate_mpc.py
flight_control/src/utilities/: dynamics_helper.py  trajectory_helper.py
ros2_interface/: README.md
ros2_interface/src/px4_comm/: CMakeLists.txt
